tests/expectations/compiler/structs/struct_access_fail.out
Error [ETYC0372117]: Expected type `i8` but type `u32` was found.
    --> compiler-test:10:21
     |
  10 |         let x: i8 = s.f1;
     |                     ^^^^
